[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.3"
ratatui = "0.28.1"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
