[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
suppaftp = { version = "^6", features = ["async"] }
futures = "0.3.30"
futures-timer = "3.0.3"
ratatui = "0.28.1"
reqwest = { version = "0.12", features = ["json"] }

paho-mqtt = "0.12"

tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-stream = "0.1.16"
clap = { version = "4.5.18", features = ["derive", "env"] }
clap_complete = "4.5.29"
clap_complete_command = "0.6.1"
tokio-rustls = "0.25.0"
rustls-native-certs = "0.8.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
serde_derive = "1.0.210"
toml = "0.8.19"
config-file = "0.2.3"
home = "0.5.9"
